@startuml Order System

top to bottom direction
skinparam linetype ortho

class User
class Product
class SellerProfile

class Order {
  id
  deliveryAddress
  status
  total
}

class SubOrder {
  id
  paymentMethod
  status
  subtotal
}

class SubOrderItem {
  id
  quantity
  priceSnapshot
}

User "1" -- "*" Order : buyer
Order "1" *-- "1..*" SubOrder : split by seller
SubOrder "*" --> "1" SellerProfile
SubOrder "1" *-- "*" SubOrderItem
SubOrderItem "*" --> "1" Product

@enduml